SynProdGITV1/force-app/main/default/objects/Product2/fields/Base_UoM__c.field-meta.xml
<CustomField>
    <fullName>Base_UoM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base UoM</label>
    <referenceTo>UoM_Std_Data__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>