SynProdGITV1/force-app/main/default/objects/Product2/fields/External_System__c.field-meta.xml
<CustomField>
    <fullName>External_System__c</fullName>
    <label>External System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S4</fullName>
            </value>
            <value>
                <fullName>AT ERP</fullName>
            </value>
            <value>
                <fullName>OMN ERP</fullName>
            </value>
            <value>
                <fullName>ENORICA</fullName>
            </value>
            <value>
                <fullName>Vietnam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>