SynProdGITV1/force-app/main/default/objects/Product2/fields/Internal_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Internal_Product_ID__c</fullName>
    <description>Internal Product ID - this will be copied to Product ID when it is empty, i.e. Products are directly created in Salesforce</description>
    <displayFormat>1{0000000}</displayFormat>
    <label>Internal Product ID</label>
    <type>AutoNumber</type>
</CustomField>