SynProdGITV1/force-app/main/default/objects/Product2/fields/Product_Category_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Category_Text__c</fullName>
    <description>Concatenation of assignment Product Category&apos;s Name (Level 1 - Level 2 - Level 3)</description>
    <inlineHelpText>Auto-Populated on Save</inlineHelpText>
    <label>Product Category Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>