SynProdGITV1/force-app/main/default/objects/Product2/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <description>For ERP products - this will be populated by ERP&apos;s MATNR Number 
For Salesforce Products - this will be populated by Internal Product ID which is an AutoNumber 10000000 onwards
(We might need to turn off the Unique flag during the migration of C4C Products if Product ID will be blank)</description>
    <externalId>true</externalId>
    <inlineHelpText>For ERP products - MATNR 
For Salesforce Product - Internal Product ID (AutoNumber)</inlineHelpText>
    <label>Product Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>