SynProdGITV1/force-app/main/default/objects/Product2/fields/Product_Label__c.field-meta.xml
<CustomField>
    <fullName>Product_Label__c</fullName>
    <description>Product Name with TM to be used in Performa invoice</description>
    <label>Product Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>