SynProdGITV1/force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Product_Id__c</columns>
    <columns>Product_Label__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Base_UoM__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Product_Category__c</columns>
    <columns>Product_Category_Text__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>External_System__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>